# agify

./: Cargo.toml  README.md
.github/workflows/: publish.yml
src/: lib.rs
