[package]
name = "agify"
description = "Rust client for the agify.io API"
version = "0.1.0"
license = "MIT"
authors = ["Nemuel Wainaina"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
reqwest = { version = "0.12.5", features = ["json"] }
serde = "1.0.204"
serde_derive = "1.0.204"
tokio = { version = "1.39.2", features = ["full"] }
